# hinglish-nlp

./: README.md  example.py  pyproject.toml
hinglish/: __init__.py  analyzer.py
hinglish.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
